docs/envoy/v1.13.0/_sources/api-v3/admin/v3/config_dump.proto.rst.txt
.. _envoy_v3_api_file_envoy/admin/v3/config_dump.proto:

ConfigDump
==========


.. _envoy_v3_api_msg_admin.v3.ConfigDump:

admin.v3.ConfigDump
-------------------

`[admin.v3.ConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L19>`_

The :ref:`/config_dump <operations_admin_interface_config_dump>` admin endpoint uses this wrapper
message to maintain and serve arbitrary configuration information from any component in Envoy.

.. code-block:: json

  {
    "configs": []
  }

.. _envoy_v3_api_field_admin.v3.ConfigDump.configs:

configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) This list is serialized and dumped in its entirety at the
  :ref:`/config_dump <operations_admin_interface_config_dump>` endpoint.
  
  The following configurations are currently supported and will be dumped in the order given
  below:
  
  * *bootstrap*: :ref:`BootstrapConfigDump <envoy_v3_api_msg_admin.v3.BootstrapConfigDump>`
  * *clusters*: :ref:`ClustersConfigDump <envoy_v3_api_msg_admin.v3.ClustersConfigDump>`
  * *listeners*: :ref:`ListenersConfigDump <envoy_v3_api_msg_admin.v3.ListenersConfigDump>`
  * *routes*:  :ref:`RoutesConfigDump <envoy_v3_api_msg_admin.v3.RoutesConfigDump>`
  
  You can filter output with the resource and mask query parameters.
  See :ref:`/config_dump?resource={} <operations_admin_interface_config_dump_by_resource>`,
  :ref:`/config_dump?mask={} <operations_admin_interface_config_dump_by_mask>`,
  or :ref:`/config_dump?resource={},mask={}
  <operations_admin_interface_config_dump_by_resource_and_mask>` for more information.
  
  


.. _envoy_v3_api_msg_admin.v3.UpdateFailureState:

admin.v3.UpdateFailureState
---------------------------

`[admin.v3.UpdateFailureState proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L41>`_


.. code-block:: json

  {
    "failed_configuration": "{...}",
    "last_update_attempt": "{...}",
    "details": "..."
  }

.. _envoy_v3_api_field_admin.v3.UpdateFailureState.failed_configuration:

failed_configuration
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) What the component configuration would have been if the update had succeeded.
  
  
.. _envoy_v3_api_field_admin.v3.UpdateFailureState.last_update_attempt:

last_update_attempt
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Time of the latest failed update attempt.
  
  
.. _envoy_v3_api_field_admin.v3.UpdateFailureState.details:

details
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Details about the last failed update attempt.
  
  


.. _envoy_v3_api_msg_admin.v3.BootstrapConfigDump:

admin.v3.BootstrapConfigDump
----------------------------

`[admin.v3.BootstrapConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L59>`_

This message describes the bootstrap configuration that Envoy was started with. This includes
any CLI overrides that were merged. Bootstrap configuration information can be used to recreate
the static portions of an Envoy configuration by reusing the output as the bootstrap
configuration for another Envoy.

.. code-block:: json

  {
    "bootstrap": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.BootstrapConfigDump.bootstrap:

bootstrap
  (:ref:`config.bootstrap.v3.Bootstrap <envoy_v3_api_msg_config.bootstrap.v3.Bootstrap>`) 
  
.. _envoy_v3_api_field_admin.v3.BootstrapConfigDump.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the BootstrapConfig was last updated.
  
  


.. _envoy_v3_api_msg_admin.v3.ListenersConfigDump:

admin.v3.ListenersConfigDump
----------------------------

`[admin.v3.ListenersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L72>`_

Envoy's listener manager fills this message with all currently known listeners. Listener
configuration information can be used to recreate an Envoy configuration by populating all
listeners as static listeners or by returning them in a LDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_listeners": [],
    "dynamic_listeners": []
  }

.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` in the
  last processed LDS discovery response. If there are only static bootstrap listeners, this field
  will be "".
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.static_listeners:

static_listeners
  (:ref:`admin.v3.ListenersConfigDump.StaticListener <envoy_v3_api_msg_admin.v3.ListenersConfigDump.StaticListener>`) The statically loaded listener configs.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.dynamic_listeners:

dynamic_listeners
  (:ref:`admin.v3.ListenersConfigDump.DynamicListener <envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListener>`) State for any warming, active, or draining listeners.
  
  
.. _envoy_v3_api_msg_admin.v3.ListenersConfigDump.StaticListener:

admin.v3.ListenersConfigDump.StaticListener
-------------------------------------------

`[admin.v3.ListenersConfigDump.StaticListener proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L77>`_

Describes a statically loaded listener.

.. code-block:: json

  {
    "listener": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.StaticListener.listener:

listener
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The listener config.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.StaticListener.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Listener was last successfully updated.
  
  


.. _envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListenerState:

admin.v3.ListenersConfigDump.DynamicListenerState
-------------------------------------------------

`[admin.v3.ListenersConfigDump.DynamicListenerState proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L88>`_


.. code-block:: json

  {
    "version_info": "...",
    "listener": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListenerState.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` field at the time
  that the listener was loaded. In the future, discrete per-listener versions may be supported
  by the API.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListenerState.listener:

listener
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The listener config.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListenerState.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Listener was last successfully updated.
  
  


.. _envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListener:

admin.v3.ListenersConfigDump.DynamicListener
--------------------------------------------

`[admin.v3.ListenersConfigDump.DynamicListener proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L107>`_

Describes a dynamically loaded listener via the LDS API.

.. code-block:: json

  {
    "name": "...",
    "active_state": "{...}",
    "warming_state": "{...}",
    "draining_state": "{...}",
    "error_state": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListener.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name or unique id of this listener, pulled from the DynamicListenerState config.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListener.active_state:

active_state
  (:ref:`admin.v3.ListenersConfigDump.DynamicListenerState <envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListenerState>`) The listener state for any active listener by this name.
  These are listeners that are available to service data plane traffic.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListener.warming_state:

warming_state
  (:ref:`admin.v3.ListenersConfigDump.DynamicListenerState <envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListenerState>`) The listener state for any warming listener by this name.
  These are listeners that are currently undergoing warming in preparation to service data
  plane traffic. Note that if attempting to recreate an Envoy configuration from a
  configuration dump, the warming listeners should generally be discarded.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListener.draining_state:

draining_state
  (:ref:`admin.v3.ListenersConfigDump.DynamicListenerState <envoy_v3_api_msg_admin.v3.ListenersConfigDump.DynamicListenerState>`) The listener state for any draining listener by this name.
  These are listeners that are currently undergoing draining in preparation to stop servicing
  data plane traffic. Note that if attempting to recreate an Envoy configuration from a
  configuration dump, the draining listeners should generally be discarded.
  
  
.. _envoy_v3_api_field_admin.v3.ListenersConfigDump.DynamicListener.error_state:

error_state
  (:ref:`admin.v3.UpdateFailureState <envoy_v3_api_msg_admin.v3.UpdateFailureState>`) Set if the last update failed, cleared after the next successful update.
  
  



.. _envoy_v3_api_msg_admin.v3.ClustersConfigDump:

admin.v3.ClustersConfigDump
---------------------------

`[admin.v3.ClustersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L149>`_

Envoy's cluster manager fills this message with all currently known clusters. Cluster
configuration information can be used to recreate an Envoy configuration by populating all
clusters as static clusters or by returning them in a CDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_clusters": [],
    "dynamic_active_clusters": [],
    "dynamic_warming_clusters": []
  }

.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` in the
  last processed CDS discovery response. If there are only static bootstrap clusters, this field
  will be "".
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.static_clusters:

static_clusters
  (:ref:`admin.v3.ClustersConfigDump.StaticCluster <envoy_v3_api_msg_admin.v3.ClustersConfigDump.StaticCluster>`) The statically loaded cluster configs.
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.dynamic_active_clusters:

dynamic_active_clusters
  (:ref:`admin.v3.ClustersConfigDump.DynamicCluster <envoy_v3_api_msg_admin.v3.ClustersConfigDump.DynamicCluster>`) The dynamically loaded active clusters. These are clusters that are available to service
  data plane traffic.
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.dynamic_warming_clusters:

dynamic_warming_clusters
  (:ref:`admin.v3.ClustersConfigDump.DynamicCluster <envoy_v3_api_msg_admin.v3.ClustersConfigDump.DynamicCluster>`) The dynamically loaded warming clusters. These are clusters that are currently undergoing
  warming in preparation to service data plane traffic. Note that if attempting to recreate an
  Envoy configuration from a configuration dump, the warming clusters should generally be
  discarded.
  
  
.. _envoy_v3_api_msg_admin.v3.ClustersConfigDump.StaticCluster:

admin.v3.ClustersConfigDump.StaticCluster
-----------------------------------------

`[admin.v3.ClustersConfigDump.StaticCluster proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L154>`_

Describes a statically loaded cluster.

.. code-block:: json

  {
    "cluster": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.StaticCluster.cluster:

cluster
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The cluster config.
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.StaticCluster.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Cluster was last updated.
  
  


.. _envoy_v3_api_msg_admin.v3.ClustersConfigDump.DynamicCluster:

admin.v3.ClustersConfigDump.DynamicCluster
------------------------------------------

`[admin.v3.ClustersConfigDump.DynamicCluster proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L166>`_

Describes a dynamically loaded cluster via the CDS API.

.. code-block:: json

  {
    "version_info": "...",
    "cluster": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.DynamicCluster.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` field at the time
  that the cluster was loaded. In the future, discrete per-cluster versions may be supported by
  the API.
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.DynamicCluster.cluster:

cluster
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The cluster config.
  
  
.. _envoy_v3_api_field_admin.v3.ClustersConfigDump.DynamicCluster.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Cluster was last updated.
  
  



.. _envoy_v3_api_msg_admin.v3.RoutesConfigDump:

admin.v3.RoutesConfigDump
-------------------------

`[admin.v3.RoutesConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L207>`_

Envoy's RDS implementation fills this message with all currently loaded routes, as described by
their RouteConfiguration objects. Static routes configured in the bootstrap configuration are
separated from those configured dynamically via RDS. Route configuration information can be used
to recreate an Envoy configuration by populating all routes as static routes or by returning them
in RDS responses.

.. code-block:: json

  {
    "static_route_configs": [],
    "dynamic_route_configs": []
  }

.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.static_route_configs:

static_route_configs
  (:ref:`admin.v3.RoutesConfigDump.StaticRouteConfig <envoy_v3_api_msg_admin.v3.RoutesConfigDump.StaticRouteConfig>`) The statically loaded route configs.
  
  
.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.dynamic_route_configs:

dynamic_route_configs
  (:ref:`admin.v3.RoutesConfigDump.DynamicRouteConfig <envoy_v3_api_msg_admin.v3.RoutesConfigDump.DynamicRouteConfig>`) The dynamically loaded route configs.
  
  
.. _envoy_v3_api_msg_admin.v3.RoutesConfigDump.StaticRouteConfig:

admin.v3.RoutesConfigDump.StaticRouteConfig
-------------------------------------------

`[admin.v3.RoutesConfigDump.StaticRouteConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L211>`_


.. code-block:: json

  {
    "route_config": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.StaticRouteConfig.route_config:

route_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The route config.
  
  
.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.StaticRouteConfig.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Route was last updated.
  
  


.. _envoy_v3_api_msg_admin.v3.RoutesConfigDump.DynamicRouteConfig:

admin.v3.RoutesConfigDump.DynamicRouteConfig
--------------------------------------------

`[admin.v3.RoutesConfigDump.DynamicRouteConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L222>`_


.. code-block:: json

  {
    "version_info": "...",
    "route_config": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.DynamicRouteConfig.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` field at the time that
  the route configuration was loaded.
  
  
.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.DynamicRouteConfig.route_config:

route_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The route config.
  
  
.. _envoy_v3_api_field_admin.v3.RoutesConfigDump.DynamicRouteConfig.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Route was last updated.
  
  



.. _envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump:

admin.v3.ScopedRoutesConfigDump
-------------------------------

`[admin.v3.ScopedRoutesConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L249>`_

Envoy's scoped RDS implementation fills this message with all currently loaded route
configuration scopes (defined via ScopedRouteConfigurationsSet protos). This message lists both
the scopes defined inline with the higher order object (i.e., the HttpConnectionManager) and the
dynamically obtained scopes via the SRDS API.

.. code-block:: json

  {
    "inline_scoped_route_configs": [],
    "dynamic_scoped_route_configs": []
  }

.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.inline_scoped_route_configs:

inline_scoped_route_configs
  (:ref:`admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs <envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs>`) The statically loaded scoped route configs.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.dynamic_scoped_route_configs:

dynamic_scoped_route_configs
  (:ref:`admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs <envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs>`) The dynamically loaded scoped route configs.
  
  
.. _envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs:

admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs
--------------------------------------------------------

`[admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L253>`_


.. code-block:: json

  {
    "name": "...",
    "scoped_route_configs": [],
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the scoped route configurations.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs.scoped_route_configs:

scoped_route_configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The scoped route configurations.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.InlineScopedRouteConfigs.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the scoped route config set was last updated.
  
  


.. _envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs:

admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs
---------------------------------------------------------

`[admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L267>`_


.. code-block:: json

  {
    "name": "...",
    "version_info": "...",
    "scoped_route_configs": [],
    "last_updated": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the scoped route configurations.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_v3_api_field_service.discovery.v3.DiscoveryResponse.version_info>` field at the time that
  the scoped routes configuration was loaded.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.scoped_route_configs:

scoped_route_configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The scoped route configurations.
  
  
.. _envoy_v3_api_field_admin.v3.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the scoped route config set was last updated.
  
  



.. _envoy_v3_api_msg_admin.v3.SecretsConfigDump:

admin.v3.SecretsConfigDump
--------------------------

`[admin.v3.SecretsConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L294>`_

Envoys SDS implementation fills this message with all secrets fetched dynamically via SDS.

.. code-block:: json

  {
    "static_secrets": [],
    "dynamic_active_secrets": [],
    "dynamic_warming_secrets": []
  }

.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.static_secrets:

static_secrets
  (:ref:`admin.v3.SecretsConfigDump.StaticSecret <envoy_v3_api_msg_admin.v3.SecretsConfigDump.StaticSecret>`) The statically loaded secrets.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.dynamic_active_secrets:

dynamic_active_secrets
  (:ref:`admin.v3.SecretsConfigDump.DynamicSecret <envoy_v3_api_msg_admin.v3.SecretsConfigDump.DynamicSecret>`) The dynamically loaded active secrets. These are secrets that are available to service
  clusters or listeners.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.dynamic_warming_secrets:

dynamic_warming_secrets
  (:ref:`admin.v3.SecretsConfigDump.DynamicSecret <envoy_v3_api_msg_admin.v3.SecretsConfigDump.DynamicSecret>`) The dynamically loaded warming secrets. These are secrets that are currently undergoing
  warming in preparation to service clusters or listeners.
  
  
.. _envoy_v3_api_msg_admin.v3.SecretsConfigDump.DynamicSecret:

admin.v3.SecretsConfigDump.DynamicSecret
----------------------------------------

`[admin.v3.SecretsConfigDump.DynamicSecret proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L299>`_

DynamicSecret contains secret information fetched via SDS.

.. code-block:: json

  {
    "name": "...",
    "version_info": "...",
    "last_updated": "{...}",
    "secret": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.DynamicSecret.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the secret.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.DynamicSecret.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.DynamicSecret.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the secret was last updated.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.DynamicSecret.secret:

secret
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The actual secret information.
  Security sensitive information is redacted (replaced with "[redacted]") for
  private keys and passwords in TLS certificates.
  
  


.. _envoy_v3_api_msg_admin.v3.SecretsConfigDump.StaticSecret:

admin.v3.SecretsConfigDump.StaticSecret
---------------------------------------

`[admin.v3.SecretsConfigDump.StaticSecret proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v3/config_dump.proto#L319>`_

StaticSecret specifies statically loaded secret in bootstrap.

.. code-block:: json

  {
    "name": "...",
    "last_updated": "{...}",
    "secret": "{...}"
  }

.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.StaticSecret.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the secret.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.StaticSecret.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the secret was last updated.
  
  
.. _envoy_v3_api_field_admin.v3.SecretsConfigDump.StaticSecret.secret:

secret
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The actual secret information.
  Security sensitive information is redacted (replaced with "[redacted]") for
  private keys and passwords in TLS certificates.
  
  


